# mulkeyboard

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xwr/mulkeyboard/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ukey.cpp  usbrw.cpp  usbrw.h
app/src/main/java/com/xwr/mulkeyboard/: HexUtil.java  KeyboardServer.java  MainActivity.java  UKeyApi.java  UKeyDevice.java  UKeyUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xwr/mulkeyboard/: ExampleUnitTest.java
